--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Donut Website</title>
     <link rel="icon" href="/asset.css/img/5678.png" type="image/x-icon" />
-    <link rel="stylesheet" href="./asset.css/css/style.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./asset.css/icon/themify-icons/themify-icons.css">
 </head>
 <body>
