--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
         <div class="info-list">
             <div class="info-item">
                 <p class="item-1">Name</p>
-                <img src="./asset.css/img/bitch (1).png" alt="Name" class="item-1-image">
+                <img src="https://user-images.githubusercontent.com/102859609/197398009-fcc151f4-c246-4866-8f20-48d1822d66de.png" alt="Name" class="item-1-image">
             </div>
             <div class="info-item">
                 <p class="item-2">Name</p>
-                <img src="./asset.css/img/bitch (1).png" alt="Name" class="item-2-image">
+                <img src="https://user-images.githubusercontent.com/102859609/197398009-fcc151f4-c246-4866-8f20-48d1822d66de.png" alt="Name" class="item-2-image">
             </div>
             <div class="info-item">
                 <p class="item-3">Name</p>
-                <img src="./asset.css/img/bitch (1).png" alt="Name" class="item-3-image">
+                <img src="https://user-images.githubusercontent.com/102859609/197398009-fcc151f4-c246-4866-8f20-48d1822d66de.png" alt="Name" class="item-3-image">
             </div>
         </div>
     </div>
@@ -70,7 +70,7 @@
            <div>
              <ul class="place-list">
               <li class = "place-item">
-                <img class="place-img" src="/asset.css/img/ba1c796fc180a9a2ea9a3105530f35ee.512x512x1.png"></img>
+                <img class="place-img" src="https://user-images.githubusercontent.com/102859609/197398006-7a3095f0-87c5-4f5a-9fcb-57247c863c35.png"></img>
                 <div class="place-body">
                     <h3 class = "place-heading">Place 1</h3>
                     <p class="place-date">11/08/22</p>
@@ -79,7 +79,7 @@
                 </div>
               </li>
               <li class = "place-item">
-                <img class="place-img" src="/asset.css/img/ba1c796fc180a9a2ea9a3105530f35ee.512x512x1.png"></img>
+                <img class="place-img" src="https://user-images.githubusercontent.com/102859609/197398006-7a3095f0-87c5-4f5a-9fcb-57247c863c35.png"></img>
                 <div class="place-body">
                     <h3 class = "place-heading">Place 2</h3>
                     <p class="place-date">11/08/22</p>
@@ -88,7 +88,7 @@
                 </div>
               </li>
               <li class = "place-item">
-                <img class="place-img" src="/asset.css/img/ba1c796fc180a9a2ea9a3105530f35ee.512x512x1.png"></img>
+                <img class="place-img" src="https://user-images.githubusercontent.com/102859609/197398006-7a3095f0-87c5-4f5a-9fcb-57247c863c35.png"></img>
                 <div class="place-body">
                     <h3 class = "place-heading">Place 3</h3>
                     <p class="place-date">11/08/22</p>
@@ -134,29 +134,10 @@
             </div>
             
         </div>
-        <!-- <div class="contact-option-list">
-            <ul class="contact-list" style="list-style-type: none;">
-                <li>
-                    <a href="">
-                    <img class="contact-img" src="/asset.css/img/640px-Facebook-icon-1.png" alt="">
-                    <p class="contact-text">Facebook</p></a>
-                </li>
-                <li>
-                    <a href="">
-                    <img class="contact-img" src="/asset.css/img/mjgnhfbgvfcdzfgh.PNG" alt="">
-                    <p class="contact-text">Twitter</p></a>
-                </li>
-                <li>
-                    <a href="">
-                        <img class="contact-img" src="/asset.css/img/LinkedIn_icon.svg.png" alt="">
-                        <p class="contact-text">LinkedIn</p>
-                    </a>
-                </li>
-            </ul> 
-        </div> -->
+       
     </div>
     <div class="map-section">
-        <img src="/asset.css/img/dgdfgdfg.PNG" alt="" class="img-map">
+        <img src="https://user-images.githubusercontent.com/102859609/197398017-81bfc04b-c774-405a-a0d0-1c43b2d8b640.PNG" alt="" class="img-map">
     </div>
 </div>
 <div id="footer" >    
